# pagina_karaoke

pagina_karaoke/: app.py  pyproject.toml  requirements.txt
pagina_karaoke/pagina_karaoke/pagina_karaoke/static/: scripts.js
pagina_karaoke/pagina_karaoke/templates/: index.html
pagina_karaoke/templates/: index.html
