[tool.poetry]
name = "pagina_karaoke"
version = "0.1.0"
description = ""
authors = ["Seu Nome <seuemail@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.0.2"
mysql-connector-python = "^8.0.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
